v2ray/rules.v4
# Generated by iptables-save v1.8.3 on Mon May 25 20:19:49 2020
*mangle
:PREROUTING ACCEPT [1604340:4579799791]
:INPUT ACCEPT [2439134:4640031263]
:FORWARD ACCEPT [51:4368]
:OUTPUT ACCEPT [1776369:4499434044]
:POSTROUTING ACCEPT [1776429:4499439024]
:V2RAY - [0:0]
:V2RAY_MASK - [0:0]
-A PREROUTING -j V2RAY
-A OUTPUT -j V2RAY_MASK
-A V2RAY -d 202.91.33.197/32 -j RETURN
-A V2RAY -d 127.0.0.1/32 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 255.255.255.255/32 -j RETURN
-A V2RAY -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY -p udp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY -p tcp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY_MASK -d 202.91.33.197/32 -j RETURN
-A V2RAY_MASK -d 224.0.0.0/4 -j RETURN
-A V2RAY_MASK -d 255.255.255.255/32 -j RETURN
-A V2RAY_MASK -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY_MASK -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY_MASK -m mark --mark 0xff -j RETURN
-A V2RAY_MASK -p udp -j MARK --set-xmark 0x1/0xffffffff
-A V2RAY_MASK -p tcp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Mon May 25 20:19:49 2020
# Generated by iptables-save v1.8.3 on Mon May 25 20:19:49 2020
*filter
:INPUT ACCEPT [36:7476]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28:1336]
COMMIT
# Completed on Mon May 25 20:19:49 2020
# Generated by iptables-save v1.8.3 on Mon May 25 20:19:49 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon May 25 20:19:49 2020
